--- a/package.json
+++ b/package.json
@@ -13,25 +13,31 @@
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^13.0.0",
     "@hookform/resolvers": "^2.9.7",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
+    "date-fns": "^2.29.3",
     "expo": "~46.0.9",
     "expo-app-loading": "~2.1.0",
     "expo-font": "~10.2.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "intl": "^1.2.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.35.0",
     "react-native": "0.69.5",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.5",
-    "yup": "^0.32.11",
-    "react-native-gesture-handler": "~2.5.0"
+    "victory-native": "^36.6.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
