--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
+    "@react-navigation/stack": "^6.3.1",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "date-fns": "^2.29.3",
     "expo": "~46.0.9",
     "expo-app-loading": "~2.1.0",
+    "expo-apple-authentication": "~4.3.0",
+    "expo-auth-session": "~3.7.1",
     "expo-font": "~10.2.0",
+    "expo-random": "~12.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "intl": "^1.2.5",
@@ -44,6 +49,7 @@
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "@types/styled-components-react-native": "^5.1.3",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.6.3"
   },
   "private": true
